--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "path for platforms without path",
   "main": "index.js",
   "devDependencies": {
+    "brittle": "^3.1.1",
     "standard": "^17.0.0"
   },
   "scripts": {
-    "test": "standard"
+    "test": "standard && brittle test.js"
   },
   "repository": {
     "type": "git",
