--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/holepunchto/tiny-paths.git"
   },
   "author": "Mathias Buus (@mafintosh)",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/holepunchto/tiny-paths/issues"
   },
